fixed z-index header conflicting with leaflet map z-index

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -101,7 +101,7 @@ body, html {
   height: 110px;
   background: $nivel-blue;
   position: fixed;
-  z-index: 10;
+  z-index: 9999;
   width: 100%;
   &__inner {
     justify-content: space-between;
